--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Some silly changes from master branch
 -->
 <head>
-	<title>silly changes on master</title>
+	<title>Lots of trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,10 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some crap, probably we will remove it
+			Just some content
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Akshay Sanghai 2014</p>
 	</footer>
 </body>
 </html>
