mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2019 Git Training
-	Adding changes before rebasing confict
+	Some silly changes from master branch
 -->
 <head>
-	<title>A very respectful website</title>
+	<title>silly changes on master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some crap, probably we will remove it
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Git training 2014</p>
+		<p>&copy; Akshay Sanghai 2014</p>
 	</footer>
 </body>
 </html>
